--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omniplay",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
@@ -10,7 +10,13 @@
     "mammoth": "^1.6.0",
     "xlsx": "^0.18.5",
     "highlight.js": "^11.7.0",
-    "pdfjs-dist": "^3.4.120"
+    "pdfjs-dist": "^3.4.120",
+    "@fedepujol/rar.js": "^1.0.0",
+    "7z-wasm": "^1.0.0",
+    "react-window": "^1.8.9",
+    "react-virtualized-auto-sizer": "^1.0.8",
+    "idb": "^7.1.1",
+    "crypto-js": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,21 +25,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
 }
