--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "xlsx": "^0.18.5",
     "highlight.js": "^11.7.0",
     "pdfjs-dist": "^3.4.120",
-    "@fedepujol/rar.js": "^1.0.0",
+    "rar.js": "git+https://github.com/SheetJS/js-rar.git",
     "7z-wasm": "^1.0.0",
     "react-window": "^1.8.9",
     "react-virtualized-auto-sizer": "^1.0.8",
