--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "xlsx": "^0.18.5",
     "highlight.js": "^11.7.0",
     "pdfjs-dist": "^3.4.120",
-    "rar.js": "git+https://github.com/SheetJS/js-rar.git",
+    "jszip": "^3.10.1",
     "7z-wasm": "^1.0.0",
+  "unrar.js": "^1.1.0",
+  "comlink": "^4.3.1"",
     "react-window": "^1.8.9",
     "react-virtualized-auto-sizer": "^1.0.8",
     "idb": "^7.1.1",
