--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,11 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "build",
-        "includeFiles": ["public/sw.js"]
+        "includeFiles": [
+          "node_modules/unrar.js/dist/unrar.wasm",
+          "node_modules/7z-wasm/7z.wasm",
+          "public/sw.js"
+        ]
       }
     }
   ],
