--- a/package.json
+++ b/package.json
@@ -7,21 +7,36 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "jszip": "^3.10.1",
+    "file-type": "^18.3.0",
     "mammoth": "^1.6.0",
     "xlsx": "^0.18.5",
     "highlight.js": "^11.7.0",
     "pdfjs-dist": "^3.4.120",
-    "unrar.js": "github:sheetjs/js-rar",
-    "7z-wasm": "^1.0.0",
     "react-window": "^1.8.9",
     "react-virtualized-auto-sizer": "^1.0.8",
     "idb": "^7.1.1",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "7z-wasm": "^1.0.0"
+  },
+  "resolutions": {
+    "**/js-rar": "git+https://github.com/sheetjs/js-rar.git"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
