--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "jszip": "^3.10.1",
-    "file-type": "^18.3.0",
     "mammoth": "^1.6.0",
     "xlsx": "^0.18.5",
     "highlight.js": "^11.7.0",
@@ -16,7 +15,11 @@
     "react-virtualized-auto-sizer": "^1.0.8",
     "idb": "^7.1.1",
     "crypto-js": "^4.1.1",
-    "7z-wasm": "^1.0.0"
+    "7z-wasm": "^1.0.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "svgo": "^3.0.2",
+    "eslint": "^8.57.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "sourcemap-codec": "^1.4.15",
+    "svgo": "^3.0.2",
+    "eslint": "^8.57.0"
   }
 }
