--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "crypto-js": "^4.1.1",
     "7z-wasm": "^1.0.0",
     "@rollup/plugin-terser": "^0.4.3",
-    "@jridgewell/sourcemap-codec": "^1.4.15",
-    "svgo": "^3.0.2",
-    "eslint": "^8.57.0"
+    "@jridgewell/sourcemap-codec": "^1.4.15"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,10 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "sourcemap-codec": "^1.4.15",
-    "svgo": "^3.0.2",
-    "eslint": "^8.57.0"
   }
 }
