--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "react-virtualized-auto-sizer": "^1.0.8",
     "idb": "^7.1.1",
     "crypto-js": "^4.1.1",
-    "7z-wasm": "^1.0.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@jridgewell/sourcemap-codec": "^1.4.15"
+    "7z-wasm": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
