--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "jszip": "^3.10.1",
+    "file-type": "^18.3.0",
     "mammoth": "^1.6.0",
     "xlsx": "^0.18.5",
     "highlight.js": "^11.7.0",
