--- a/vercel.json
+++ b/vercel.json
@@ -6,24 +6,19 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "build",
-        "includeFiles": [
-          "node_modules/7z-wasm/7z.wasm",
-          "public/sw.js"
-        ]
+        "nodeVersion": "18.x"
       }
     }
   ],
   "routes": [
     {
-      "src": "/sw.js",
-      "dest": "/sw.js",
-      "headers": {
-        "Service-Worker-Allowed": "/"
-      }
-    },
-    {
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  }
 }
