--- a/package.json
+++ b/package.json
@@ -6,17 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "jszip": "^3.10.1",
-    "file-type": "^18.3.0",
-    "mammoth": "^1.6.0",
-    "xlsx": "^0.18.5",
-    "highlight.js": "^11.7.0",
-    "pdfjs-dist": "^3.4.120",
-    "react-window": "^1.8.9",
-    "react-virtualized-auto-sizer": "^1.0.8",
-    "idb": "^7.1.1",
-    "crypto-js": "^4.1.1",
-    "7z-wasm": "^1.0.0"
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-terser": "^0.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +26,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
